--- a/chainsaw_man_page.html
+++ b/chainsaw_man_page.html
@@ -57,7 +57,7 @@
                 не очень высокий уровень детализации, бывает нарушина перспектива, прочие недочеты и на выходе мы имеем мангу чуть выше среднего по рисовке. 
                 Все спасают бои в этой манге. Бои хоть как-то вытягивают мангу в плане рисовки. Каждый бой уникален и рисовка вполне передает атмасферу
                 происходящего в сюжете. Самое интересное то, что все выше перечисленные недочеты рисовки растворяются уже после 1 главы манги.
-                нет, они не изчезают, но на них перестаешь обращать внимание. Все благодаря сюжету...
+                нет, они не изчезают, но на них перестаешь обращать внимание. Все благодаря сюжету...<br>
                 <img src="img\chainsaw_man_img\maxresdefault.jpg" class="p1">
             </div>
             <div class="ch_t">
