--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 Существует огромное множество жанров манги, возможно даже больше чем жанров у книг.
                 Все перечислять и описывать нет смысла, я думаю ты читатель уже взрослый, сам справишься,
                 но основные я бы перечислил:
-            <div CLASS="janrs" >
+            <div class="janrs" >
                 <div  class="janr" id="D1"><p class="J">Кодомо</p> (кодомомукэ манга 子供向け漫画) — для детей до 12 лет. Яркая рисовка,
                     отсутствие или намеренное упрощение идейного наполнения, простые сюжеты, понятные детям,
                     отсутствие сцен насилия.
