--- a/Berserk_page.html
+++ b/Berserk_page.html
@@ -37,7 +37,7 @@
                         <div class="reincornation_page button" onclick="location.href='reincornation_page.html';">
                             reincarnation <br>
                             of<br>
-                            the unemployed
+                            unemployed
                         </div>
                     </div>
                 </nav>
@@ -63,7 +63,7 @@
                 деталями, но в контексте сюжета это в опрадвно, тк во время ожесточенного сражения читателю наверняка безразличен камень, 
                 лежащий у ноги воина, тк он не играет никакой роли, в данном котексте важны лишь проиходящие события или эмоциональный 
                 посыл героя, чтобы изобразить гнев героя достаточно самого героя, но даже там автор иногда добавляет детали,
-                за что ему огромнейший респект. Если автору важно передать внешний вид чего бы то ни было, то он не скупится на детали. 
+                за что ему огромнейший респект. Если автору важно передать внешний вид чего бы то ни было, то он не скупится на детали. <br>
                 <img src="img\Berserk_img\monsers1.jpg" class="p1">
             </div>
             <div class="b_t">
