--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="social_buttons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="shortcut icon" href="img\main_page_img\odyvanchik.png" type="image/png">
 <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Bangers&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Volkhov&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
                         <div class="reincornation_page button" onclick="location.href='reincornation_page.html';">
                             reincarnation <br>
                             of<br>
-                            the unemployed
+                            unemployed
                         </div>
                     </div>
                 </nav>
