--- a/reincornation_page.html
+++ b/reincornation_page.html
@@ -38,7 +38,7 @@
                         <div class="reincornation_page button" onclick="location.href='reincornation_page.html';">
                             reincarnation <br>
                             of<br>
-                            the unemployed
+                            unemployed
                         </div>
                     </div>
                 </nav>
