--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <div id="social-test">
         <ul class="social">
-            <li><a href="https://youtu.be/JyD13ifbAN4?list=PLq8Ntomg_pV3A7PNJYPGdPrxEqlkY9Ki5" class="fa fa-twitter" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a>
+            <li><a href="https://youtu.be/26SYzuvYUhY" class="fa fa-twitter" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a>
         </li>
             <li><a href="https://youtu.be/cMIHLzuJ4Wg?list=PLq8Ntomg_pV3A7PNJYPGdPrxEqlkY9Ki5" class="fa fa-youtube" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a></li>
             <li><a href="https://youtu.be/qcehAUrrc7Y?list=PLq8Ntomg_pV3A7PNJYPGdPrxEqlkY9Ki5" class="fa fa-google" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a>
