--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <li><a href="https://youtu.be/hI_Ec0-O2VY" class="fa fa-youtube" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a></li>
             <li><a href="https://youtu.be/skfeC1ENy1A" class="fa fa-google" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a>
         </li>
-            <li><a href="https://youtu.be/UX_yKE4pPBk?list=PLq8Ntomg_pV3A7PNJYPGdPrxEqlkY9Ki5" class="fa fa-odnoklassniki" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a></li>
+            <li><a href="https://youtu.be/oZAGNaLrTd0" class="fa fa-odnoklassniki" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a></li>
             <li><a href="https://youtu.be/eD1U_uwLtFw?list=PLq8Ntomg_pV3A7PNJYPGdPrxEqlkY9Ki5" class="fa fa-vk" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a>
         </li>
             <li><a href="https://youtu.be/lIInpSvS5uQ?list=PLq8Ntomg_pV3A7PNJYPGdPrxEqlkY9Ki5" class="fa fa-github" aria-hidden="true" style="color:rgba(167, 146, 129, 1);text-decoration: none;"></a>
